# llm-gateway

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gateway.example.json
src/: config.rs  main.rs  types.rs
src/oauth/: anthropic.rs  chatgpt.rs  mod.rs  token_store.rs
src/providers/: anthropic.rs  chatgpt.rs  mod.rs  openai_compat.rs
src/router/: mod.rs  model_resolver.rs  server.rs
src/translate/: anthropic_to_openai.rs  chatgpt.rs  mod.rs  openai_to_anthropic.rs  stream.rs
